--- a/changelog.d/586.changed.md
+++ b/changelog.d/586.changed.md
@@ -1,1 +1,1 @@
-Switched to running Argus server on python 3.9 in docker.
+Switched to running Argus server on python 3.10 and Postgres 14 in docker.
